--- a/src/pages/special_event/special_event.html
+++ b/src/pages/special_event/special_event.html
@@ -10,7 +10,17 @@
 <ion-content class="overview-content">
     <ion-grid padding class="meals-grid">
         <div padding align="center">What's your special Event?</div>
-        
+            <ion-row>
+                <ion-col col-2></ion-col>
+                <ion-col col-8>
+                    <ion-select >
+                        <ion-option value="bacon">Bacon</ion-option>
+                        <ion-option value="extra cheese">Extra Cheese</ion-option>
+                        <ion-option value="pepperoni">Pepperoni</ion-option>
+                    </ion-select>
+                </ion-col>
+                <ion-col col-2></ion-col>
+            </ion-row>
     </ion-grid>
 
     <ion-grid class="meals-grid" padding>
