update new sesigns.

--- a/src/pages/special_event/special_event.html
+++ b/src/pages/special_event/special_event.html
@@ -13,10 +13,11 @@
             <ion-row>
                 <ion-col col-2></ion-col>
                 <ion-col col-8>
-                    <ion-select >
-                        <ion-option value="bacon">Bacon</ion-option>
-                        <ion-option value="extra cheese">Extra Cheese</ion-option>
-                        <ion-option value="pepperoni">Pepperoni</ion-option>
+                    <ion-select multiple="false">
+                        <ion-option  value="Getting Engaged">Getting Engaged</ion-option>
+                        <ion-option value="extra cheese">Wedding</ion-option>
+                        <ion-option value="pepperoni">A Sports Event</ion-option>
+                        <ion-option value="pepperoni">Vacation</ion-option>
                     </ion-select>
                 </ion-col>
                 <ion-col col-2></ion-col>
