--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,32 +5,35 @@
     </button>
     <ion-title>Home</ion-title>
   </ion-navbar>
- <ion-toolbar>
+ <!--<ion-toolbar>
    <ion-navbar>
     <ion-title>{{viewTitle}}</ion-title>
-        <!--<ion-buttons end>-->
-            <!--<button ion-button [disabled]="isToday" (click)="today()">Today</button>-->
-            <!--<button ion-button (click)="loadEvents()">Load Events</button>-->
-        <!--</ion-buttons>-->
     </ion-navbar>
- </ion-toolbar>
-
+ </ion-toolbar>-->
+<!--#f2f8fd-->
 
   
 </ion-header>
 
-   <ion-content class="has-header home-content">
-     <!--<ion-navbar color="primary">
-        <ion-title>{{viewTitle}}</ion-title>-->
-        <!--<ion-buttons end>-->
-            <!--<button ion-button [disabled]="isToday" (click)="today()">Today</button>-->
-            <!--<button ion-button (click)="changeMode('month')">M</button>-->
-            <!--<button ion-button (click)="changeMode('week')">W</button>-->
-            <!--<button ion-button (click)="changeMode('day')">D</button>-->
-            <!--<button ion-button (click)="loadEvents()">Load Events</button>
-        </ion-buttons>-->
-    <!--</ion-navbar>-->
-    <calendar [eventSource]="eventSource"
+<ion-content class="home-page">
+
+    <div padding class="main-content">
+        <p padding> Meals Planned : 42</p>
+        <p padding>Diets Planned : 16/31</p>
+
+        <div padding>
+            <img src="assets/img/logo.png">
+        </div>
+
+        
+    </div>
+
+</ion-content>
+
+
+
+   <!--<ion-content class="has-header home-content">-->
+    <!--<calendar [eventSource]="eventSource"
               [calendarMode]="calendar.mode"
               [currentDate]="calendar.currentDate"
               (onCurrentDateChanged)="onCurrentDateChanged($event)"
@@ -38,5 +41,5 @@
               (onTitleChanged)="onViewTitleChanged($event)"
               (onTimeSelected)="onTimeSelected($event)"
               step="30">
-    </calendar>
-</ion-content>
+    </calendar>-->
+<!--</ion-content>-->
