--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -8,12 +8,12 @@
     <ion-list>
         <ion-item>
             <ion-label > <ion-icon name="person"></ion-icon></ion-label>
-            <ion-input type="text" [(ngModel)]="data.uname" placeholder="Username"></ion-input>
+            <ion-input type="text" [(ngModel)]="data.email" placeholder="Username"></ion-input>
         </ion-item>
 
         <ion-item>
             <ion-label > <ion-icon name="lock"></ion-icon></ion-label>
-            <ion-input type="password" [(ngModel)]="data.paswd" placeholder="Password"></ion-input>
+            <ion-input type="password" [(ngModel)]="data.password" placeholder="Password"></ion-input>
         </ion-item>
 
     </ion-list>
