--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -8,25 +8,25 @@
     <ion-list>
         <ion-item>
             <ion-label > <ion-icon name="person"></ion-icon></ion-label>
-            <ion-input type="text" placeholder="Firstname & Lastname"></ion-input>
+            <ion-input type="text" [(ngModel)]="signup.name" placeholder="Firstname & Lastname"></ion-input>
         </ion-item>
         <ion-item>
             <ion-label > <ion-icon name="mail"></ion-icon></ion-label>
-            <ion-input type="email" placeholder="Email"></ion-input>
+            <ion-input type="email" [(ngModel)]="signup.email" placeholder="Email"></ion-input>
         </ion-item>
         <ion-item>
             <ion-label > <ion-icon name="lock"></ion-icon></ion-label>
-            <ion-input type="text" placeholder="Password"></ion-input>
+            <ion-input type="password" [(ngModel)]="signup.pass" placeholder="Password"></ion-input>
         </ion-item>
 
         <ion-item>
             <ion-label > <ion-icon name="navigate"></ion-icon></ion-label>
-            <ion-input type="text" placeholder="Location" aria-readonly="true"></ion-input>
+            <ion-input type="text" placeholder="Location" [(ngModel)]="signup.location" aria-readonly="true"></ion-input>
         </ion-item>
 
     </ion-list>
     <div align="center">
-        <button ion-button class="submit-button">SIGHN UP</button>
+        <button ion-button class="submit-button" (click)="submitSignup(signup)">SIGHN UP</button>
     </div>
 
     <p align="center" (click)="goToLogin()">SignIn Here</p>
