--- a/src/pages/special_event/special_event.html
+++ b/src/pages/special_event/special_event.html
@@ -16,8 +16,8 @@
                     <ion-select multiple="false" [(ngModel)]="special.event">
                         <ion-option  value="Getting Engaged">Getting Engaged</ion-option>
                         <ion-option value="extra cheese">Wedding</ion-option>
-                        <ion-option value="pepperoni">A Sports Event</ion-option>
-                        <ion-option value="pepperoni">Vacation</ion-option>
+                        <ion-option value="A Sports Event">A Sports Event</ion-option>
+                        <ion-option value="Vacation">Vacation</ion-option>
                     </ion-select>
                 </ion-col>
                 <ion-col col-2></ion-col>
