--- a/src/pages/plannerlist/plannerlist.html
+++ b/src/pages/plannerlist/plannerlist.html
@@ -9,19 +9,31 @@
 </ion-header>
 <ion-content class="nutrition-planner">
 
+  <div class="progress-outer">
+      <div class="progress-inner" [style.width]="progress + '%'">
+          {{progress}}%
+      </div>
+  </div>
+   <ion-toolbar class="calorie-meal">
+    <ion-title>CALORIE IN MEAL - {{calorieInMeal}}</ion-title>
+  </ion-toolbar>
+    <ion-row class="myTabs">
+      <ion-col [ngClass]="{'item-selection':activeTab==0 }" (click)="tabActive(0)"> <ion-icon ios="ios-pie" md="md-pie"></ion-icon>BALANCE</ion-col>
+      <ion-col [ngClass]="{'item-selection':activeTab==1 }" (click)="tabActive(1)"> <ion-icon ios="ios-pie" md="md-pie"></ion-icon>ANALYSIS</ion-col>
+    </ion-row>
 
-
-  <ion-list>
-    <ion-item padding *ngFor="let item of data" class="subMealItem">
+<analysis *ngIf="activeTab == 1"></analysis>
+  <ion-list *ngIf="activeTab == 0">
+    <ion-item padding *ngFor="let item of data" class="subMealItem" (click)="goTofoodList(item)">
       <ion-icon  item-right name="ios-arrow-forward"></ion-icon>
         <h2>{{item.sub_meal_name}}</h2>
-                    <ion-item  >
-                        <ion-avatar item-left>
-                            <img src="../assets/img/test.png">
-                        </ion-avatar>
-                        <h2>Cher</h2>
-                        <p>Ugh. As if.</p>
-                    </ion-item>
+        <ion-item *ngIf="item.selected.length >0">
+            <ion-avatar item-left>
+                <img src="../assets/img/test.png">
+            </ion-avatar>
+            <h2>Cher</h2>
+            <p>Ugh. As if.</p>
+        </ion-item>
     </ion-item>
   </ion-list>
 </ion-content>
