--- a/src/pages/body_details/body_details.html
+++ b/src/pages/body_details/body_details.html
@@ -36,8 +36,8 @@
         <ion-row class="radio-row" padding-top>
             <ion-col col-5 center> <span class="text-A">Orientation</span></ion-col>
             <ion-col col-7>
-                <div class="radio-text"><input type="radio" [(ngModel)]="Bodydetails.orientation" name='orientation' value="Vegetarian"> Vegetarian</div>
-                <div class="radio-text"> <input name='orientation'  type="radio" [(ngModel)]="Bodydetails.orientation" value="NonVegetarian"> Non Vegetarian</div>
+                <div class="radio-text"><input type="radio" [(ngModel)]="Bodydetails.orientation" name='orientation' value="1"> Vegetarian</div>
+                <div class="radio-text"> <input name='orientation'  type="radio" [(ngModel)]="Bodydetails.orientation" value="2"> Non Vegetarian</div>
             </ion-col>
         </ion-row>
 
