--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -9,7 +9,7 @@
 </ion-header>
 <ion-content>
     <ion-card>
-      <ion-card-content>
+      <ion-card-content (click)="changeLanguage()">
         Change location
       </ion-card-content>
     </ion-card>
